Ingress/path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 192.168.1.10
spec:
  rules:
  - host: example.devops.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 90
